//https://protobuf.dev/programming-guides/proto3/
syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

package communication;

// Service definition for bidirectional streaming communication
service CommunicationService {
  // Bidirectional streaming RPC for real-time chat
  rpc Chat (stream ChatMessage) returns (stream ChatMessage);
  
  // Health check endpoint
  rpc HealthCheck (Empty) returns (HealthResponse);
}

// Message definitions
message ChatMessage {
  string user_id = 1;
  string message = 2;
  int64 timestamp = 3;
  
  // Decimal value represented as a string to avoid floating point errors.
  // This is intended for values in the inclusive range [0, 1] with high precision.
  // The string should be formatted using US culture (e.g., "0.123456789").
  string precise_fraction = 4;
}

message HealthResponse {
  string status = 1;
  string server_id = 2;
  int64 timestamp = 3;
}

message Empty {
}
